# crypto-script

./: README.md  cryscript.db  pyproject.toml
Data/: downloader.py  ftx_helper.py  sql_helper.py  view_download.py
Notes/: architecture.txt  installation.txt  notes.txt
Production1/: calculator.py  ftx_helper.py  record.txt  tsmom.py  view_balance.py  view_clear_positions.py  view_init_recordfile.py  view_sanity_check.py  view_trade.py  volatility.py
Production2_sub1/: forecast.py  record.txt  trader.py  view_sanity_check.py  view_trade.py  volatility.py
Production3_main/: forecast.py  portfolio.py  record.txt  recorder.py  view_balance.py  view_init_recordfile.py  view_sanity_check.py  view_test.py  view_trade.py
Simulation/: experiment.py  ftx_futures_exchange_helper.py  view_test.py
cryscript/: cryscript.sql  universe.txt  utils.py
